--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,19 @@
       @apply bg-background text-foreground;
     }
   }
+
+
+  .input-style {
+    @apply w-full p-2 border border-border rounded-lg bg-input text-foreground outline-none;
+  }
+
+  .sv-root-modern {
+    transform: scale(0.85); /* Adjust scale (0.85 = 85% of original size) */
+    transform-origin: top left; /* Keeps layout aligned */
+  }
+  
+  .svc-creator {
+    max-width: 1000px; /* Limit the max width */
+    margin: auto; /* Center the form */
+  }
+  
